# CompGraphics-Shmax

./: Cargo.toml  README.md
.run/: Build Common.run.xml  Build Geometry.run.xml  Run Lab1.run.xml  Run Lab2.run.xml  Run Lab3-4.run.xml  Run Lab3.run.xml  Run Lab4.run.xml  Run Lab5.run.xml  Run Lab6.run.xml  Run Lab7.run.xml
Lab1/: Cargo.toml
Lab1/src/: context.rs  errors.rs  main.rs  ui.rs
Lab1/src/ui/: app.rs  workspace.rs
Lab1/src/ui/components/: canvas.rs  settings.rs
Lab2/: Cargo.toml
Lab2/src/: io.rs  (+3 more)
Lab3/: Cargo.toml
Lab3-4/: Cargo.toml
Lab4/: Cargo.toml
Lab4/src/: main.rs
Lab4/src/ui/: app.rs
Lab4/src/ui/components/: canvas.rs
Lab5/: Cargo.toml
Lab6/: Cargo.toml
Lab7/: Cargo.toml
common/: Cargo.toml
geometry/: Cargo.toml
geometry/src/: animations.rs  conversion.rs  convertible.rs  fractals.rs  lib.rs  pipeline.rs  projections.rs  smooth.rs  space.rs  units.rs  viewport.rs
geometry/src/animations/: cone.rs  contour.rs  epicycloid.rs  star.rs  walker.rs
geometry/src/figures/: contour.rs  detail.rs  epicycloid.rs  grid.rs  grid3d.rs  star3d.rs  surface.rs  texture.rs
geometry/src/fractals/: zigzag.rs
geometry/src/primitives/: circle.rs  line2d.rs  line3d.rs  point2d.rs  point3d.rs  vector2d.rs
geometry/src/projections/: twopoint.rs
geometry/src/shapes/: dot.rs  square.rs
geometry/src/smooth/: ferguson.rs
geometry/src/transformations/: affine.rs  projective.rs
geometry/src/transformations/affine/: scaling.rs  symmetry.rs
geometry/src/transformations/euclidean/: offset.rs  offset3d.rs  rotation.rs  rotation3d.rs
(+35 files in other folders)
