[package]
name = "Lab1"
version = "0.1.0"
authors = ["Maksym Murenets"]

edition = "2024"
rust-version = "1.92"

categories = ["graphics"]

[lints]
workspace = true

[dependencies]
chrono = "0.4.42"
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
fern = "0.7.1"
log = "0.4.29"
nalgebra = "0.34.1"
thiserror = "2.0.17"