[package]
name = "Lab4"
version = "0.1.0"
authors = ["Maksym Murenets"]

edition = "2024"
rust-version = "1.92"

categories = ["graphics"]

[lints]
workspace = true

[dependencies]
geometry = { path = "../geometry" }

chrono = "0.4.42"
crossbeam = "0.8.4"
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
fern = "0.7.1"
log = "0.4.29"
o2o = "0.5.4"
rand = "0.9.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
thiserror = "2.0.17"
toml = "0.9.8"
