[package]
name = "geometry"
version = "0.1.0"
authors = ["Maksym Murenets"]

edition = "2024"
rust-version = "1.92"

categories = ["graphics"]

[lints]
workspace = true

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
egui = "0.33.3"
nalgebra = "0.34.1"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"